<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MapActivity">

    <TextView
        android:id="@+id/topDescTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/distance_between_two_points"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kilometresTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_km"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/topDescTextView" />

    <TextView
        android:id="@+id/metresPointTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_m"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/kilometresTextView" />

    <FrameLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metresPointTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>