<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_two_points"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstPointTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_point"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/promptTextView"
        app:layout_constraintBottom_toTopOf="@+id/firstPointContainer"/>

    <LinearLayout
        android:id="@+id/firstPointContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/firstPointTextView"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstLatTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:hint="@string/latitude">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstLatEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstLongTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:hint="@string/longitude">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstLongEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/secondPointTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_point"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/firstPointContainer"
        app:layout_constraintBottom_toTopOf="@+id/secondPointContainer"/>

    <LinearLayout
        android:id="@+id/secondPointContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/secondPointTextView"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondLatTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:hint="@string/latitude"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondLatEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondLongTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:hint="@string/longitude">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondLongEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/countButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondPointContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>